# travel_agent

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  link to github repo.txt  pyproject.toml  requirements.txt  requirements_backend.txt
backend/: main.py  main1.py
frontend/: app.py
mcp_servers/: travel_agent_server.py
