[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "requests>=2.33.1",
    "serpapi>=1.0.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
